--- a/website/src/pages/profile-page/ProfilePage.css
+++ b/website/src/pages/profile-page/ProfilePage.css
@@ -23,8 +23,8 @@ table {
   border: solid 1px #ebf0f2;
   border-radius: 0.5rem;
   border-spacing: 1rem;
+}
 
-  tr {
-    border: solid 1px white;
-  }
+ul {
+  list-style: none;
 }
