--- a/website/src/pages/register-match/RegisterMatch.css
+++ b/website/src/pages/register-match/RegisterMatch.css
@@ -9,7 +9,7 @@
 }
 .center {
   text-align: center;
-  }
+}
 
 .name {
   text-align: center;
@@ -37,9 +37,12 @@ table {
     height: fit-content;
 }*/
 .selectBox {
-    font-size: 20px;
-     
-    width: 100%;
-    height: fit-content;
+  font-size: 20px;
+
+  width: 100%;
+  height: fit-content;
 }
 
+.selector {
+  color: black;
+}
