--- a/website/src/components/navbar/Navbar.css
+++ b/website/src/components/navbar/Navbar.css
@@ -24,6 +24,60 @@ a {
   text-decoration: none;
 }
 
-.small {
-    font-size: small;
+.hamburger {
+  all: unset;
+  outline: 0;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+.slice {
+  width: 30px;
+  height: 5px;
+  background-color: #ebf0f2;
+  border-radius: 5px;
+  margin: 6px 6px;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 280px;
+  z-index: 5;
+  background-color: #232730;
+  transform: translateX(-100%);
+  transition: transform 300ms ease-in-out;
+}
+
+.menu-open {
+  transform: translateX(0);
+}
+
+.list {
+  padding-top: 2rem;
+  padding-left: 4rem;
+  list-style: none;
+}
+
+.overlay {
+  visibility: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 4;
+  transition: opacity 300ms ease-in-out;
+}
+
+.overlay-open {
+  visibility: visible;
+  opacity: 1;
 }
