Disable every match notification but the first

--- a/website/src/components/button/Button.css
+++ b/website/src/components/button/Button.css
@@ -4,7 +4,7 @@
   text-align: center;
 }
 
-button:not(.accept):not(.decline):not(.disable) {
+.bigButton{
   height: 3rem;
   width: 10rem;
   min-width: fit-content;
