fix scroll issues

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -25,11 +25,10 @@ code {
 }
 
 .main {
-  position: fixed;
+  position: absolute;
   top: 5rem;
   left: 0;
   right: 0;
-  bottom: 0;
 }
 
 .mobile {
