--- a/website/src/components/navbar/Navbar.css
+++ b/website/src/components/navbar/Navbar.css
@@ -3,8 +3,10 @@
   top: 0;
   left: 0;
   border-bottom: solid 1px black;
+  background-color: #232730;
   height: 5rem;
   width: 100%;
+  z-index: 10;
 }
 
 .items {
