--- a/website/src/pages/profile-page/ProfilePage.css
+++ b/website/src/pages/profile-page/ProfilePage.css
@@ -16,3 +16,16 @@ table {
 ul {
   list-style: none;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 2rem auto;
+}
+
+
+.row button {
+    margin: auto 1rem;
+}
