--- a/website/src/pages/profile-page/ProfilePage.css
+++ b/website/src/pages/profile-page/ProfilePage.css
@@ -22,10 +22,9 @@ ul {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 2rem auto;
+  margin: 4rem auto 2rem auto;
 }
 
-
 .row button {
-    margin: auto 1rem;
+  margin: auto 1rem;
 }
