Make success text green

--- a/website/src/pages/register/RegisterPage.css
+++ b/website/src/pages/register/RegisterPage.css
@@ -26,7 +26,12 @@ input {
   text-align: center;
 }
 
+.success {
+  color: green;
+  text-align: center;
+}
+
 .button {
-    width: fit-content;
-    margin: 2rem auto;
+  width: fit-content;
+  margin: 2rem auto;
 }
