Refactor to use new api

--- a/website/src/pages/admin-page/Admin.css
+++ b/website/src/pages/admin-page/Admin.css
@@ -23,10 +23,12 @@ h2 {
 
 .accept:hover {
   background-color: darkgreen;
+  border: none;
 }
 
 .decline:hover {
   background-color: darkred;
+  border: none;
 }
 
 span {
