--- a/website/src/pages/register-match/RegisterMatch.css
+++ b/website/src/pages/register-match/RegisterMatch.css
@@ -6,7 +6,7 @@ table {
   width: 100%;
   margin: auto auto;
   text-align: center;
-  border: solid 1px #ebf0f2;
+  border: solid 1px var(--primary-color);
   border-radius: 0.5rem;
   border-spacing: 1rem;
 }
