--- a/website/src/index.css
+++ b/website/src/index.css
@@ -6,8 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  color: #ebf0f2;
-  background-color: #232730;
+  --primary-color: #ebf0f2;
+  --background-color: #232730;
+  --black: #1c1b1b;
+  --green: #4eb004;
+  --red: #f03b00;
+  --orange: #f8a532;
+
+  color: var(--primary-color);
+  background-color: var(--background-color);
 }
 
 code {
@@ -20,7 +27,7 @@ code {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #ebf0f2;
+  background: var(--primary-color);
   border-radius: 10px;
 }
 
@@ -38,7 +45,7 @@ code {
 }
 
 .container {
-  background-color: #1c1b1b;
+  background-color: var(--black);
   width: 80%;
   max-width: 60rem;
   height: fit-content;
@@ -50,7 +57,7 @@ code {
 .table-container {
   max-height: 60vh;
   overflow-y: scroll;
-  border: solid 1px #ebf0f2;
+  border: solid 1px var(--primary-color);
   border-radius: 0.5rem;
   border-spacing: 1rem;
 }
