--- a/website/src/pages/history/History.css
+++ b/website/src/pages/history/History.css
@@ -1,7 +1,7 @@
 .table-container {
   max-height: 60vh;
   overflow-y: scroll;
-  border: solid 1px #ebf0f2;
+  border: solid 1px var(--primary-color);
   border-radius: 0.5rem;
   border-spacing: 1rem;
 }
@@ -14,11 +14,11 @@ table {
 }
 
 .red {
-    color: #f03b00;
-    display: inline;
+  color: var(--red);
+  display: inline;
 }
 
 .green {
-    color: #4eb004;
-    display: inline;
+  color: var(--green);
+  display: inline;
 }
