--- a/website/src/pages/login-page/LoginPage.css
+++ b/website/src/pages/login-page/LoginPage.css
@@ -10,10 +10,10 @@ h1 {
 input {
   width: 100%;
   height: 3rem;
-  background-color: #232730;
-  border: solid 1px #ebf0f2;
+  background-color: var(--background-color);
+  border: solid 1px var(--primary-color);
   border-radius: 0.5rem;
-  color: #ebf0f2;
+  color: var(--primary-color);
   text-indent: 1rem;
 }
 
@@ -23,6 +23,6 @@ input {
 }
 
 .button {
-    width: fit-content;
-    margin: 2rem auto;
+  width: fit-content;
+  margin: 2rem auto;
 }
