Implement reset password frontend

--- a/website/src/pages/admin-page/Admin.css
+++ b/website/src/pages/admin-page/Admin.css
@@ -3,7 +3,7 @@ h2 {
   text-align: center;
 }
 
-.new-user-button {
+.notification-button {
   border: none;
   border-radius: 3px;
   cursor: pointer;
