--- a/website/src/components/elo-graph/EloGraph.css
+++ b/website/src/components/elo-graph/EloGraph.css
@@ -7,11 +7,24 @@
 
 .selectorElo {
   color: black;
-  width: 20rem;
-  margin-right: 10px;
+  min-width: 16rem;
+}
+
+.first-selector {
+  margin-right: 1rem;
 }
 
 .inputs {
   display: flex;
   flex-direction: row;
+}
+
+@media only screen and (max-width: 800px) {
+  .inputs {
+    flex-direction: column;
+  }
+
+  .first-selector {
+    margin-right: 0;
+  }
 }
