--- a/website/src/pages/create-tournament/CreateTournament.css
+++ b/website/src/pages/create-tournament/CreateTournament.css
@@ -1,17 +1,6 @@
-h1 {
+.center {
   text-align: center;
 }
-
-.input {
-  width: 100%;
-  height: 3rem;
-  background-color: var(--background-color);
-  border: solid 1px var(--primary-color);
-  border-radius: 0.5rem;
-  color: var(--primary-color);
-  text-indent: 1rem;
-}
-
 
 .inputs {
   margin: auto;
@@ -20,28 +9,5 @@ h1 {
 
 .button {
   width: fit-content;
-  margin: 2rem auto;
-}
-
-.big-button {
-  height: fit-content;
-  min-height: 3rem;
-  width: fit-content;
-  min-width: 10rem;
-  border-radius: 1rem;
-  font-size: 1.5rem;
-  background-size: 100% 200%;
-  background-image: linear-gradient(
-    to top,
-    var(--background-color) 50%,
-    var(--primary-color) 0
-  );
-  transition: background-position 200ms, color 200ms;
-}
-
-button:hover {
-  background-position: bottom;
-  border: solid 2px var(--primary-color);
-  color: var(--primary-color);
-  cursor: pointer;
+  margin: 4rem auto 0 auto;
 }
