--- a/website/src/index.css
+++ b/website/src/index.css
@@ -12,6 +12,7 @@ body {
   --green: #4eb004;
   --red: #f03b00;
   --orange: #f8a532;
+  --purple: #52207e;
 
   color: var(--primary-color);
   background-color: var(--background-color);
