--- a/website/src/components/tournament/Tournament.css
+++ b/website/src/components/tournament/Tournament.css
@@ -1,4 +1,4 @@
-.flex-container {
+.bracket {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -6,7 +6,7 @@
   justify-content: space-evenly;
 }
 
-.flex-container > div {
+.bracket > div {
   background-color: #f1f1f1;
   /* width: 100px; */
   margin: 10px;
@@ -22,6 +22,9 @@
   justify-content: space-evenly;
 }
 
-.flex-item {
+.match {
   color: green;
+  background-color: hotpink;
+  width: 100px;
+  height: 100px;
 }
