--- a/website/src/components/tournament/Tournament.css
+++ b/website/src/components/tournament/Tournament.css
@@ -1,30 +1,108 @@
+.tournament {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
+.bracket-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .bracket {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  background-color: DodgerBlue;
-  justify-content: space-evenly;
+  justify-content: space-around; /*space-around gives more natural look than evenly*/
+  min-width: 200px;
+  flex-grow: 1;
 }
 
-.bracket > div {
-  background-color: #f1f1f1;
-  /* width: 100px; */
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
+/* Group together every other */
+.bracket .match:nth-child(2n):not(:last-child) {
+  margin-bottom: 50px;
+  /* background-color: red; */
 }
-/* .flex-container {
-    float: left;
-} */
-.tournament {
-  display: flex;
-  justify-content: space-evenly;
+.bracket .match {
+  margin-bottom: 15px;
 }
 
+.border-right {
+  border-right: 1px solid gray;
+}
+
+@media only screen and (max-width: 1024px) {
+  .tournament {
+    flex-direction: column;
+  }
+
+  .bracket {
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .border-right {
+    border-right: none;
+    border-bottom: 1px solid gray;
+  }
+}
 .match {
-  color: green;
-  background-color: hotpink;
-  width: 100px;
-  height: 100px;
+  width: 60%;
+  margin: 1rem auto;
+  font-size: 1.5rem;
+  line-height: 4rem;
+  color: var(--primary-color);
+  background-color: var(--olive);
+  border-radius: 12px;
+  border: 2px solid gray;
+}
+
+.match:hover {
+  background-color: var(--background-color);
+}
+
+.match-info {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+}
+
+.black {
+  color: black;
+}
+
+.Modal {
+  all: unset;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+}
+
+.modal-body {
+  height: 200px;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 3rem;
+  border: 1px solid gray;
+  transform: translateY(-50%);
+  background-color: var(--background-color);
+  border-radius: 16px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 560px) {
+  .modal-body {
+    margin: 0 2rem;
+  }
+}
+
+.Overlay {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
 }
