--- a/website/src/pages/create-tournament/CreateTournament.css
+++ b/website/src/pages/create-tournament/CreateTournament.css
@@ -11,3 +11,13 @@
   width: fit-content;
   margin: 4rem auto 0 auto;
 }
+
+.selector {
+  width: 100%;
+  height: 3rem;
+  background-color: var(--background-color);
+  border: solid 1px var(--primary-color);
+  border-radius: 0.5rem;
+  color: var(--primary-color);
+  text-indent: 1rem;
+}
